[package]
edition = "2021"
name = "moodlight"
version = "0.3.0"

[dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
envy = "0.4.2"
gethostname = "0.2.3"
log = "0.4.16"
palette = {version = "0.6.0", features = ["serializing"]}
rumqttc = "0.11.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["macros", "rt", "io-util", "fs", "sync", "signal"]}
