[package]
edition = "2021"
name = "moodlight"
version = "0.4.0"

[dependencies]
anyhow = "1.0.56"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.28"
log = "0.4.16"
palette = {version = "0.7.2", features = ["serializing"]}
rumqttc = {version = "0.22.0", features = ["url"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["macros", "rt", "io-util", "fs", "sync", "signal"]}
